--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,4 +1,5 @@
-/* src/components/Home.css */
+/* @import url("https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap");
+  font-family: "Cutive Mono", monospace; */
 
 html,
 body {
@@ -14,14 +15,39 @@ body {
 .home-container {
   display: flex;
   flex-direction: column;
+  font-family: "Cutive Mono", monospace;
   height: 100%;
 }
 
 .home-content {
-  flex: 1; /* This makes the content take up the remaining space */
-  padding: 20px;
-  background-color: #f0f8ff;
-  overflow-y: auto; /* Allows scrolling if the content overflows */
+  flex: 1;
+  /* padding: 20px; */
+  overflow-y: auto;
+  /* border: solid red 1px; */
+  align-items: end;
+  background-image: url("../../Images/subtle-background.jpg");
+  background-size: cover;
+}
+
+.grid-overlay {
+  height: 100%;
+  width: 100%;
+  background-image: url("../../Images/squareImg.png");
+  background-size: 0.77%;
+  background-repeat: space;
+  display: flex;
+  justify-content: center;
+}
+.home-content img {
+  /* border: solid yellow 2px; */
+  height: 100%;
+  padding-left: 10%;
+}
+
+.icons-cont {
+  /* border: solid salmon 2px; */
+  padding-top: 10%;
+  /* height: 100%; */
 }
 
 /* //////////////////// ICON STYLING //////////////////// */
@@ -29,9 +55,19 @@ body {
   display: flex;
   justify-content: left;
   align-items: center;
-  padding: 5px;
-  height: 5rem;
-  gap: 1rem;
+  padding: 5%;
+  min-height: 7%;
+  max-height: 10%;
+  width: 17vw;
+  gap: 6%;
+  text-decoration: none;
+  color: transparent;
+  /* border: solid rgb(38, 34, 34) 2px; */
+}
+.Icon:hover {
+  color: black;
+  filter: invert(100%) sepia(5%) saturate(500%) hue-rotate(350deg);
+  mix-blend-mode: normal;
 }
 .icon-img {
   height: 4rem;
