--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,6 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap");
-  font-family: "Cutive Mono", monospace; */
-
 html,
 body {
   height: 100%;
@@ -15,29 +12,27 @@ body {
 .home-container {
   display: flex;
   flex-direction: column;
-  font-family: "Cutive Mono", monospace;
   height: 100%;
 }
 
 .home-content {
   flex: 1;
-  /* padding: 20px; */
   overflow-y: auto;
-  /* border: solid red 1px; */
   align-items: end;
-  background-image: url("../../Images/subtle-background.jpg");
+  background-image: url("../../Images/Home/subtle-background.jpg");
   background-size: cover;
 }
 
 .grid-overlay {
   height: 100%;
   width: 100%;
-  background-image: url("../../Images/squareImg.png");
+  background-image: url("../../Images/Home/squareImg.png");
   background-size: 0.77%;
   background-repeat: space;
   display: flex;
   justify-content: center;
 }
+
 .home-content img {
   /* border: solid yellow 2px; */
   height: 100%;
@@ -62,16 +57,20 @@ body {
   gap: 6%;
   text-decoration: none;
   color: transparent;
+  font-size: 0%;
   /* border: solid rgb(38, 34, 34) 2px; */
 }
 .Icon:hover {
   color: black;
   filter: invert(100%) sepia(5%) saturate(500%) hue-rotate(350deg);
   mix-blend-mode: normal;
+  font-size: 1rem;
 }
 .icon-img {
-  height: 4rem;
-  width: 4rem;
+  width: 3.5vw;
+  height: 3.5vw;
+  min-width: 30px; /* Minimum size */
+  max-width: 100px; /* Maximum size */
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
