--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+/* @import url("https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap");
+  font-family: "Cutive Mono", monospace; */
+
 body {
   margin: 0;
   padding: 0;
+  font-family: "Cutive Mono", monospace;
   background-color: #7f7c61b1;
 }
