--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -1,5 +1,3 @@
-/* src/components/Blog.css */
-
 html,
 body {
   height: 100%;
@@ -12,15 +10,115 @@ body {
 }
 
 .blog-container {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 .blog-content {
-  flex: 1; /* This makes the content take up the remaining space */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+}
+
+.title {
+  width: 100%;
+  margin-bottom: 20px;
+  background-color: rgba(0, 0, 0, 0.787);
+  border-radius: 15px;
   padding: 20px;
-  background-color: #f5f5f5;
-  overflow-y: auto; /* Allows scrolling if the content overflows */
-  background-color: red;
+  font-size: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+}
+
+.title a {
+  color: rgb(220, 220, 32);
+  text-decoration: none;
+}
+
+.title:hover {
+  background-color: black;
+}
+
+.blog-block {
+  width: 100%;
+  /* margin-bottom: 20px; */
+  /* background-color: rgba(238, 5, 5, 0.787); */
+  /* border-radius: 15px; */
+  /* padding: 20px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.author-img {
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+  margin: 0 50px 0 20px;
+  border: 8px black solid;
+}
+
+.posts {
+  margin: 20px;
+  width: 100%;
+  border: 8px black solid;
+  border-radius: 15px;
+  background-color: rgba(0, 0, 0, 0.49);
+  padding: 10px;
+}
+
+.posts h2 {
+  font-size: 30px;
+  text-align: center;
+  text-decoration: underline;
+  /* background-color: aliceblue; */
+  color: rgb(220, 220, 32);
+}
+
+.posts p {
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.posts figure {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+}
+
+.posts figure img {
+  max-width: 70%;
+}
+.posts a {
+  color: rgb(220, 220, 32);
+}
+
+@media (max-width: 768px) {
+  .author-img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .title {
+    font-size: 20px;
+  }
+
+  .posts h2 {
+    font-size: 18px;
+  }
+
+  .posts p {
+    font-size: 14px;
+  }
+
+  .posts figure {
+    font-size: 12px;
+  }
 }
