--- a/src/Components/Games/Concentration/Concentration.css
+++ b/src/Components/Games/Concentration/Concentration.css
@@ -20,6 +20,7 @@ body {
   background-image: url("../../../Images/Concentration/backdrop.gif");
   background-position: center;
   background-repeat: no-repeat;
+  background-color: black;
   background-size: 120%;
   filter: contrast(1.3);
 }
@@ -41,7 +42,7 @@ body {
   font-size: 1.5vw; /* 5% of the viewport width */
   cursor: pointer;
   position: relative;
-  transition: color 0.3s ease;
+  transition: color 0.1s ease;
   font-family: "Righteous", sans-serif;
   margin-bottom: 5px;
   white-space: nowrap;
