--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Cutive Mono", monospace;
-  background-color: #7f7c61b1;
+  background-color: black;
 }
