--- a/src/Components/Games/Crossword/Crossword.css
+++ b/src/Components/Games/Crossword/Crossword.css
@@ -3,15 +3,17 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-size: 16px; /* Base font size */
 }
 
 #root {
   height: 100%;
+  overflow-y: auto;
 }
 
 .Crossword {
   height: 100%;
-  /* padding-top: 3%; */
+  padding-top: 1%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,17 +22,33 @@ body {
 
 .grid-cont {
   display: grid;
-  grid-template-columns: repeat(20, 1fr); /* 20 columns */
-  grid-template-rows: repeat(16, 1fr); /* 16 rows */
-  gap: 2px; /* Space between cells, adjust as needed */
-  width: 80vw; /* Adjust this percentage for how much width the grid should take up */
-  max-width: 1000px; /* Optional: Max width to avoid it getting too large */
+  grid-template-columns: repeat(16, 1fr); /* 16 columns */
+  grid-template-rows: repeat(20, 1fr); /* 20 rows */
+  gap: 0.2%; /* Space between cells */
+  width: 50vw; /* Smaller width relative to the viewport */
+  max-width: 37%; /* Smaller max-width */
   height: auto;
-  /* background-color: green; */
+  max-height: 60vh; /* Smaller max-height */
+  aspect-ratio: 16 / 20; /* Maintain the grid aspect ratio */
+}
+
+.grid-cont div {
+  aspect-ratio: 1; /* Keeps the cells square */
 }
 
 @media (max-width: 600px) {
   .grid-cont {
-    width: 100vw; /* Adjust grid to take full width on smaller screens */
+    width: 80vw; /* Adjust grid to take a smaller width on smaller screens */
   }
+}
+
+.questions {
+  width: 50%; /* Smaller width relative to the viewport */
+  max-width: 40%; /* Smaller max-width */
+  height: auto;
+  margin-left: 2%;
+  padding-top: 1%;
+  aspect-ratio: 16 / 20; /* Maintain the grid aspect ratio */
+  font-size: 1vw; /* Font size responsive to the viewport width */
+  overflow-wrap: break-word; /* Ensure long words break to avoid overflow */
 }
