--- a/src/Components/Games/Crossword/Box.css
+++ b/src/Components/Games/Crossword/Box.css
@@ -1,5 +1,4 @@
 .Box {
-  background-color: #f0f0f0; /* Light gray background for the cells */
   aspect-ratio: 1; /* Makes the cells square */
   /* box-sizing: border-box; */
   font-size: 1.7vh;
@@ -7,6 +6,7 @@
 
 .black-box {
   background-color: rgb(0, 0, 0);
+  pointer-events: none;
 }
 
 .white-box {
@@ -17,8 +17,12 @@
   position: relative; /* Relative positioning for absolute children */
 }
 
+.white-box:hover {
+  background-color: rgb(238, 238, 238);
+}
+
 .corner {
-  font-size: 1.7vh; /* Font size relative to viewport height */
+  font-size: 1vh; /* Font size relative to viewport height */
   min-height: 0.6vh; /* Minimum height relative to viewport height */
   padding: 0.2vh; /* Padding relative to viewport height */
   display: flex;
@@ -32,4 +36,25 @@
   border-bottom: solid black 1px;
   width: 0.6vw; /* Width relative to viewport width */
   height: 0.6vw; /* Height relative to viewport width */
+}
+
+.box-input {
+  height: 50%;
+  width: 100%;
+  display: flex;
+  cursor: pointer;
+  justify-content: center;
+  align-items: end;
+  font-size: 1.3vh;
+  text-align: center;
+  font-family: inherit;
+  /* border: solid red 1px; */
+  border: none;
+  outline: none;
+
+  /* text-align: center; */
+  text-transform: uppercase;
+  background-color: transparent;
+  /* width: 2.5rem;
+  margin: 2px; */
 }
