--- a/src/Components/Games/Crossword/Crossword.css
+++ b/src/Components/Games/Crossword/Crossword.css
@@ -4,20 +4,38 @@ body {
   margin: 0;
   padding: 0;
   font-size: 16px; /* Base font size */
+  overflow: hidden; /* Prevents double scroll bars on the body */
 }
 
 #root {
   height: 100%;
-  overflow-y: auto;
+  overflow-y: auto; /* Allows the content within #root to scroll */
 }
 
 .Crossword {
   height: 100%;
-  padding-top: 1%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-y: auto; /* Keeps overflow handling within this element */
+}
+
+.logo-img {
+  height: 17%;
+  filter: brightness(0%);
+  /* border: solid 1px red; */
+}
+
+.crossword-cont {
+  /* border: solid 1px red; */
   display: flex;
   justify-content: center;
   align-items: center;
   overflow-y: auto;
+  height: 100%;
+  padding-top: 9vh;
+  padding-bottom: 9vh;
 }
 
 .grid-cont {
@@ -49,6 +67,15 @@ body {
   margin-left: 2%;
   padding-top: 1%;
   aspect-ratio: 16 / 20; /* Maintain the grid aspect ratio */
-  font-size: 1vw; /* Font size responsive to the viewport width */
+  font-size: 0.8vw; /* Font size responsive to the viewport width */
   overflow-wrap: break-word; /* Ensure long words break to avoid overflow */
+  overflow-y: auto; /* Allows questions to be scrollable within their container */
+}
+
+.buffy-img {
+  position: absolute;
+  transform: scaleX(-1);
+  bottom: 0;
+  left: 0;
+  height: 20%;
 }
