--- a/src/Components/Games/Crossword/Square.css
+++ b/src/Components/Games/Crossword/Square.css
@@ -5,7 +5,7 @@
   border: black solid 1px;
   aspect-ratio: 1; /* Makes the cells square */
   /* box-sizing: border-box; */
-  font-size: 1.6vh;
+  font-size: 92%;
   color: grey;
 }
 .black-sq {
@@ -22,8 +22,15 @@
 }
 
 .corner-num {
-  height: 20%;
-  width: 20%;
+  height: 30%;
+  width: 30%;
+  display: flex;
+  padding: 3%;
+  justify-content: center;
+  font-size: smaller;
   /* background-color: rgb(217, 86, 86); */
   color: black;
+  border-right: 1px black solid;
+  border-bottom: 1px solid black;
+  background-color: white;
 }
