--- a/src/Components/Games/Crossword/Crossword.css
+++ b/src/Components/Games/Crossword/Crossword.css
@@ -8,10 +8,8 @@ html {
   box-sizing: border-box;
   display: flex;
   justify-content: center;
-  /* align-items: center; */
 }
 
-/* Flexbox container for the crossword layout */
 .Crossword {
   display: flex;
   flex-direction: row;
@@ -22,7 +20,6 @@ html {
   /* padding: 2vh 2vw; */
 }
 
-/* Styling for the questions section */
 .questions {
   flex: 1;
   max-width: 40%;
@@ -33,31 +30,26 @@ html {
   overflow-y: auto;
 }
 
-/* Individual question items */
 .q-li {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   margin-bottom: 1rem;
   line-height: 1.5;
-  color: #333; /* Darker text color */
+  color: black;
 }
 
-/* Styling for the grid container */
 .grid-cont {
   flex: 2;
   max-width: 50%;
   min-width: 50%;
   padding: 1rem;
   margin: 1%;
-
   border-radius: 8px;
-
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden; /* Prevent any overflow */
 }
 
-/* The crossword grid itself */
 .grid {
   display: grid;
   grid-template-columns: repeat(16, 1fr); /* 16 columns */
@@ -65,7 +57,6 @@ html {
   gap: 0.1rem;
   width: 100%;
   height: 100%;
-
   border-radius: 4px;
 }
 
@@ -85,7 +76,7 @@ html {
   }
 
   .q-li {
-    font-size: 1.5rem; /* Increase font size for better readability */
+    font-size: 1rem;
   }
 }
 
