fixed global css error found in crossword css. Modal init, need to displAY ANS

--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -10,6 +10,7 @@ body {
   background-color: rgb(157, 155, 103);
   min-height: 100%; /* Ensure it takes at least the full height of the viewport */
   overflow-y: auto;
+  /* padding: 0 1vw 0 1vw; */
 }
 
 .blog-container {
