--- a/src/Components/Games/Crossword/Key.css
+++ b/src/Components/Games/Crossword/Key.css
@@ -1,3 +1,49 @@
+.Key-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
 .Key {
-  background-color: grey;
+  background-color: rgb(114, 118, 125);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  width: 80%;
+  max-width: 500px;
+}
+
+.Key-content {
+  position: relative;
+  padding: 20px;
+}
+
+.summon {
+  all: unset;
+  /* Additional styles if needed to maintain functionality */
+  cursor: pointer; /* Ensure the button still has a pointer cursor */
+  display: inline-block; /* Maintain block-level behavior */
+  text-decoration: underline;
+  padding-right: 3px;
+}
+
+.summon:hover {
+  color: black;
+}
+
+.Key-close {
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
