--- a/src/Components/Games/Crossword/Square.css
+++ b/src/Components/Games/Crossword/Square.css
@@ -1,8 +1,8 @@
 .Square {
-  background-color: #2a2a2a; /* Dark base color for a retro, edgy look */
   border: 1px solid #444; /* Dark gray borders */
   aspect-ratio: 1; /* Keeps the cells square */
   font-size: 92%;
+  /* background-color: #a7b0bd; */
   transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions */
 }
 
@@ -11,6 +11,16 @@
   height: 100%;
   width: 100%;
   pointer-events: none;
+}
+
+.highlight {
+  background-color: rgba(247, 250, 250, 0.904);
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  cursor: pointer;
 }
 
 .white {
@@ -24,12 +34,12 @@
 }
 
 .white:hover {
-  background-color: #a7b0bdc5; /* Slightly lighter on hover */
+  background-color: #889bb7fb; /* Slightly lighter on hover */
   box-shadow: 0 0 10px rgba(183, 200, 220, 0.8); /* Soft glow effect using a color from the image */
 }
 
 .correct {
-  background-color: #0b60d7;
+  background-color: inherit;
   pointer-events: none;
   height: 100%;
   width: 100%;
@@ -37,6 +47,11 @@
   flex-direction: column;
   justify-content: end;
   transition: background-color 0.3s ease;
+}
+
+.correct .input {
+  color: #000; /* Ensure the text color inside the input is black */
+  font-weight: 700;
 }
 
 .corner-num {
