--- a/src/Components/Games/Concentration/Concentration.css
+++ b/src/Components/Games/Concentration/Concentration.css
@@ -16,11 +16,11 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: start;
-  background-image: url("../../../Images/Games/Concentration/backdrop.gif");
+  background-image: url("../../../Images/Games/Concentration/wallpaper.jpg");
   background-position: center;
   background-repeat: no-repeat;
-  background-color: black;
-  background-size: 120%;
+  background-color: rgb(176, 179, 157);
+  background-size: 100%;
   filter: contrast(1.3);
 }
 
@@ -28,9 +28,19 @@ body {
   display: flex;
   align-items: center;
   /* border: solid red 1px; */
-  width: 60%;
+  width: 10%;
   gap: 50%;
   justify-content: center;
+  position: absolute;
+  bottom: 15%;
+  background-color: rgb(8, 14, 81);
+  border: solid black 3px;
+  border-radius: 10px;
+  transition: 1s;
+}
+
+.game-controls:hover {
+  background-color: rgb(34, 48, 203);
 }
 
 .con-btn {
@@ -42,7 +52,6 @@ body {
   cursor: pointer;
   position: relative;
   transition: color 0.1s ease;
-
   margin-bottom: 5px;
   white-space: nowrap;
 }
@@ -83,7 +92,6 @@ p {
   gap: 20px;
   width: 60%;
   height: 40%;
-
   min-width: 30rem;
 }
 
