--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -7,10 +7,13 @@ body {
 
 #root {
   height: 100%;
-  background-color: rgb(157, 155, 103);
+  background-color: rgb(122, 121, 81);
   min-height: 100%; /* Ensure it takes at least the full height of the viewport */
   overflow-y: auto;
   /* padding: 0 1vw 0 1vw; */
+  background-image: url("../../Images/Blog/hex.png");
+  background-repeat: space 1px;
+  background-size: 1%;
 }
 
 .blog-container {
