--- a/src/Components/Games/Concentration/Concentration.css
+++ b/src/Components/Games/Concentration/Concentration.css
@@ -19,8 +19,8 @@ body {
   background-image: url("../../../Images/Games/Concentration/wallpaper.jpg");
   background-position: center;
   background-repeat: no-repeat;
-  background-color: rgb(176, 179, 157);
-  background-size: 100%;
+  background-color: rgb(0, 0, 0);
+  background-size: 110%;
   filter: contrast(1.3);
 }
 
@@ -31,7 +31,7 @@ body {
   width: 10%;
   gap: 50%;
   justify-content: center;
-  position: absolute;
+  /* position: absolute; */
   bottom: 15%;
   background-color: rgb(8, 14, 81);
   border: solid black 3px;
@@ -91,7 +91,7 @@ p {
   grid-template-rows: repeat(3, 1fr);
   gap: 20px;
   width: 60%;
-  height: 40%;
+  height: 80%;
   min-width: 30rem;
 }
 
