--- a/src/Components/Games/Concentration/Concentration.css
+++ b/src/Components/Games/Concentration/Concentration.css
@@ -16,10 +16,10 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: start;
-  background-image: url("../../../Images/Games/Concentration/wallpaper.jpg");
+  /* background-image: url("../../../Images/Games/Concentration/wallpaper.jpg"); */
   background-position: center;
   background-repeat: no-repeat;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(235, 95, 95);
   background-size: 110%;
   filter: contrast(1.3);
 }
@@ -96,18 +96,22 @@ p {
 }
 
 .card {
-  background-image: url("../../../Images/Games/Concentration/Background-28.jpg");
+  background-image: url("../../../Images/Games/Concentration/back.png");
   background-position: center;
-  border-radius: 10px;
+  background-size: 87%;
+  background-repeat: no-repeat;
+  /* border-radius: 10px; */
   cursor: pointer;
   user-select: none;
   aspect-ratio: 2 / 3;
-  background-color: rgb(9, 4, 31);
-  border: solid black 3px;
+  /* background-color: rgb(9, 4, 31);
+  border: solid black 3px; */
 }
 
 .card.flipped {
   background-size: cover;
+  background-size: 87%;
+  background-repeat: no-repeat;
 }
 
 .card.not-flipped {
