--- a/src/Components/Games/Concentration/Concentration.css
+++ b/src/Components/Games/Concentration/Concentration.css
@@ -1,6 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;500;600;700&display=swap");
+/* 
+  font-family: "Cormorant Unicase", serif;
+  font-weight: 300;
+  font-style: normal; */
+
 html,
 body {
-  height: 100%;
+  height: 10 0%;
   margin: 0;
   padding: 0;
 }
@@ -11,64 +17,51 @@ body {
 
 .Concentration {
   height: 100%;
-  padding-top: 3%;
+  padding-top: 2%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: start;
-  /* background-image: url("../../../Images/Games/Concentration/wallpaper.jpg"); */
   background-position: center;
   background-repeat: no-repeat;
-  background-color: rgb(235, 95, 95);
-  background-size: 110%;
+
+  background-size: 80%;
   filter: contrast(1.3);
+
+  background: radial-gradient(
+      circle,
+      rgba(255, 255, 255, 0.982),
+      rgba(18, 58, 99, 0.598)
+    ),
+    linear-gradient(45deg, rgba(190, 146, 146, 0.2), rgba(0, 0, 0, 0.2));
 }
 
 .game-controls {
-  display: flex;
-  align-items: center;
-  /* border: solid red 1px; */
-  width: 10%;
-  gap: 50%;
-  justify-content: center;
-  /* position: absolute; */
-  bottom: 15%;
-  background-color: rgb(8, 14, 81);
-  border: solid black 3px;
-  border-radius: 10px;
-  transition: 1s;
 }
 
 .game-controls:hover {
-  background-color: rgb(34, 48, 203);
+  color: white;
 }
 
 .con-btn {
-  background: none;
+  /* background-image: url("../../../Images/Games/Concentration/sun.png"); */
+  height: 1rem;
+  font-size: 140%;
+  background-position: center;
+  background-size: cover;
+  outline: none;
   border: none;
-  color: #f7f0d9;
-  padding: 10px 20px;
-  font-size: 1.5vw; /* 5% of the viewport width */
-  cursor: pointer;
-  position: relative;
-  transition: color 0.1s ease;
-  margin-bottom: 5px;
-  white-space: nowrap;
+  background-color: transparent;
+  font-family: "Cormorant Unicase", serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
-/* .con-btn:hover {
-  color: grey;
-} */
+.con-btn:hover {
+  color: white;
+}
 
 .con-btn::after {
-  content: "";
-  position: absolute;
-  width: 0;
-  height: 2px;
-  bottom: 0;
-  left: 50%;
-  background-color: #f7f0d9;
-  transition: all 0.3s ease;
 }
 
 .con-btn:hover::after {
@@ -93,6 +86,8 @@ p {
   width: 60%;
   height: 80%;
   min-width: 30rem;
+  /* border: solid black 3px; */
+  padding: 1rem 1rem 0.5rem 1rem;
 }
 
 .card {
@@ -104,19 +99,10 @@ p {
   cursor: pointer;
   user-select: none;
   aspect-ratio: 2 / 3;
-  /* background-color: rgb(9, 4, 31);
-  border: solid black 3px; */
 }
 
 .card.flipped {
   background-size: cover;
   background-size: 87%;
   background-repeat: no-repeat;
-}
-
-.card.not-flipped {
-  /* background-image: url("../../../Images/Concentration/Background-28.jpg");
-  background-position: center; */
-  /* background-color: red; */
-  /* background-color: pink; */
 }
