--- a/src/Components/Games/Crossword/Crossword.css
+++ b/src/Components/Games/Crossword/Crossword.css
@@ -119,7 +119,7 @@
   padding: 10px 15px;
   border: none;
   border-radius: 5px;
-  cursor: pointer;
+  /* cursor: pointer; */
   margin-top: 10px;
 }
 
