--- a/src/Components/Games/Crossword/Square.css
+++ b/src/Components/Games/Crossword/Square.css
@@ -10,7 +10,7 @@
   background-color: #000;
   height: 100%;
   width: 100%;
-  pointer-events: none;
+  /* pointer-events: none; */
 }
 
 .highlight {
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   justify-content: end;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 .white {
@@ -39,7 +39,7 @@
 
 .correct {
   background-color: #a7b0bd;
-  pointer-events: none;
+  /* pointer-events: none; */
   height: 100%;
   width: 100%;
   display: flex;
