--- a/src/Components/Games/NoughtsAndCrosses/NoughtsAndCrosses.css
+++ b/src/Components/Games/NoughtsAndCrosses/NoughtsAndCrosses.css
@@ -51,16 +51,15 @@
 }
 
 .cell {
-  width: 100%; /* Takes full width defined by grid */
-  height: 100%; /* Makes height equal to width */
+  width: 100%;
+  height: 100%;
   font-family: "Rye", serif;
   display: flex;
   align-items: center;
   justify-content: center;
   border: solid white 1px;
   background-color: transparent;
-  font-size: 5vw; /* Font size scales with viewport width */
-  cursor: pointer;
+  font-size: 5vw;
   transition: background-color 0.3s;
   color: white;
 }
@@ -92,7 +91,7 @@
   align-items: center;
   justify-content: center;
   margin-top: 1px;
-  font-size: clamp(1.2vh, 20%, 50%);
+  font-size: clamp(1.35vh, 30%, 50%);
   font-family: monospace;
   width: 30.4%;
   white-space: nowrap;
