--- a/src/Components/Games/Concentration/Concentration.css
+++ b/src/Components/Games/Concentration/Concentration.css
@@ -24,10 +24,9 @@ body {
   justify-content: start;
   background-position: center;
   background-repeat: no-repeat;
-
   background-size: 80%;
+  padding-bottom: 5%;
   filter: contrast(1.3);
-
   background: radial-gradient(
       circle,
       rgba(255, 255, 255, 0.982),
@@ -43,10 +42,11 @@ body {
   grid-template-rows: repeat(3, 1fr);
   gap: 20px;
   width: 60%;
-  height: 80%;
+  height: 100%;
   min-width: 30rem;
   /* border: solid black 3px; */
-  padding: 1rem 1rem 0.5rem 1rem;
+  padding: 0;
+  /* margin-bottom: 1%; */
 }
 
 .card {
@@ -88,6 +88,7 @@ body {
   font-family: "Cormorant Unicase", serif;
   font-weight: 300;
   font-style: normal;
+  position: absolute;
 }
 
 .con-btn:hover {
