--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -7,7 +7,7 @@ body {
 
 #root {
   height: 100%;
-  background-color: rgb(172, 170, 100);
+  background-color: black;
   min-height: 100%; /* Ensure it takes at least the full height of the viewport */
   overflow-y: auto;
   /* padding: 0 1vw 0 1vw; */
@@ -19,8 +19,8 @@ body {
   overflow-y: auto;
   background-image: url("../../Images/Blog/hex.png");
   background-repeat: space 1px;
-  background-size: 1%;
-  background-color: rgba(49, 53, 77, 0.515);
+  background-size: 0.8%;
+  background-color: rgb(124, 143, 102);
 }
 
 .blog-container {
