--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -72,19 +72,6 @@
   padding-top: 4%;
 }
 
-.account-icon {
-  max-height: 3rem;
-  margin: 7%;
-  cursor: pointer;
-  border-radius: 10px;
-  border: black 2px solid;
-}
-
-.account-icon:hover {
-  filter: invert(0.05);
-  background-color: rgb(222, 222, 222);
-}
-
 .sub-header {
   display: flex;
   flex-direction: column;
@@ -102,19 +89,27 @@
   text-transform: uppercase;
 }
 
-.body-con {
+.icon-con {
+  height: 2rem;
+  /* border: 1px red solid; */
   display: flex;
-  height: fit-content;
-  flex-direction: column;
-  border: 1px red solid;
+  justify-content: center;
+  align-items: center;
 }
 
 .account-icon {
-  height: auto;
   width: 3rem;
   filter: invert(1);
-  border: 1px solid white;
-  border: 1px red solid;
+  max-height: 3rem;
+  cursor: pointer;
+  border-radius: 10px;
+  border: black 2px solid;
+  margin-left: 94%;
+}
+
+.account-icon:hover {
+  filter: invert(0.05);
+  background-color: rgb(222, 222, 222);
 }
 
 /* Inputs */
